--- a/brioche/src/components/Home/Nav/style.module.css
+++ b/brioche/src/components/Home/Nav/style.module.css
@@ -3,9 +3,11 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 5%;
+    padding: 1rem 5%;
     transition: padding 0.5s linear;
-    overflow: hidden;
+    /* background-color: #0f0f0f;  */
+    position: relative;
+    z-index: 1000;
 }
 
 .Navigation_brand h1 {
@@ -20,7 +22,7 @@
 }
 
 .Navigation_link ul,
-.Navigation_social ul {
+.menu ul {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -30,24 +32,25 @@
     transition: gap 0.5s linear;
 }
 
-.Navigation_link a{
+.Navigation_link a {
     text-decoration: none;
     color: rgb(255, 252, 252);
     font-weight: 500;
     transition: color 200ms linear;
     cursor: pointer;
 }
-.Navigation_link a:hover{
+
+.Navigation_link a:hover {
     color: var(--theme-color);
 }
-.Navigation_social a {
+
+.menu a {
     text-decoration: none;
     color: rgb(238, 238, 238);
     font-weight: 500;
-    
 }
 
-.Navigation_social i {
+.menu i {
     font-size: 1.25rem;
     transition: font-size 0.5s linear;
 }
@@ -57,39 +60,55 @@
     font-size: 1.5rem;
     cursor: pointer;
     color: white;
+    z-index: 1001;
 }
-.menu{
+
+.menu {
     margin-top: 1px;
 }
 
 @media (max-width: 767px) {
-    .Navigation_menu,
-    .Navigation_social {
-        max-height: 0;
-        overflow: hidden;
-        opacity: 0;
-        visibility: hidden;
-        transition: max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s;
+    .Navigation {
+        padding: 1rem 5%;
     }
 
-    .Navigation_menu.open {
-        max-height: 500px; /* Adjust this value based on your content */
+    .Navigation_menu,
+    .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000000; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.5s ease, visibility 0.5s;
+        z-index: 1000;
+    }
+
+    .Navigation_menu.open{
         opacity: 1;
         visibility: visible;
-        color: aliceblue;
     }
 
     .burger_menu {
-        font-size: 1.5rem;
-        cursor: pointer;
-        color: white;
         display: block;
     }
 
     .Navigation_link ul,
-    .Navigation_social ul {
+    .menu  {
         flex-direction: column;
         align-items: center;
+        gap: 2rem;
+    }
+
+    .Navigation_link a,
+    .menu a {
+        font-size: 1.5rem;
     }
 }
 
@@ -107,10 +126,7 @@
         gap: 1.5rem;
     }
 
-    .Navigation_social {
-        opacity: 0;
-        visibility: hidden;
-        max-height: 0;
+    .menu {
         overflow: hidden;
         transition: opacity 0.5s ease, visibility 0.5s, max-height 0.5s ease;
     }
@@ -127,11 +143,11 @@
     }
 
     .Navigation_link ul,
-    .Navigation_social ul {
+    .menu ul {
         gap: 2.5rem;
     }
 
-    .Navigation_social i {
+    .menu i {
         font-size: 1.5rem;
     }
 }
