--- a/brioche/src/components/Footer/Newsletter/style.module.css
+++ b/brioche/src/components/Footer/Newsletter/style.module.css
@@ -1,44 +1,73 @@
 .newsletter {
-    text-align: center;
-    padding: 2rem;
-    border: 1px solid var(--theme-color);
-    margin: 2rem auto;
-    width: 70%;
+  text-align: center;
+  padding: 2rem;
+  border: 1px solid var(--theme-color);
+  margin: 2rem auto;
+  width: 80%;
+  max-width: 600px;
+  height: auto;
+}
+
+.title {
+  font-size: 2rem;
+  color: var(--theme-color);
+  margin-bottom: 0.5rem;
+}
+
+.subtitle {
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.input {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background-color: transparent;
+  border: 1px solid #4a4a4a;
+  color: #e0e0e0;
+  width: 100%;
+  max-width: 300px;
+  height: 40px;
+}
+
+.button {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background-color: transparent;
+  border: 1px solid #4a4a4a;
+  color: #e0e0e0;
+  height: 40px;
+  cursor: pointer;
+  width: 100%;
+  max-width: 300px;
+}
+
+@media screen and (min-width: 768px) {
+  .newsletter {
+    width: 80%;
   }
-  
+
   .title {
     font-size: 2.5rem;
-    color: var(--theme-color);
-    margin-bottom: 0.5rem;
   }
-  
-  .subtitle {
-    font-size: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  
+
   .form {
-    display: flex;
+    flex-direction: row;
     justify-content: center;
-    gap: 1rem;
   }
-  
+
   .input {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    background-color: transparent;
-    border: 1px solid #4a4a4a;
-    color: #e0e0e0;
     width: 60%;
-    height: 40px;
   }
-  
+
   .button {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    background-color: transparent;
-    border: 1px solid #4a4a4a;
-    color: #e0e0e0;
-    height: 40px;
-    cursor: pointer;
+    width: auto;
   }
+}
