--- a/brioche/src/components/Footer/style.module.css
+++ b/brioche/src/components/Footer/style.module.css
@@ -1,7 +1,7 @@
 .app {
     background-color: #0f0f0f;
     color: #e0e0e0;
-    font-family: 'Times New Roman', serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
