--- a/brioche/src/components/Home/Header/style.module.css
+++ b/brioche/src/components/Home/Header/style.module.css
@@ -34,11 +34,12 @@ h4 {
 .image_container {
     position: relative; /* Ensure the pseudo-elements are positioned relative to the container */
     width: 50%;
+    height: auto;
 }
 
 .image_container img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .image_container::before,
@@ -96,7 +97,7 @@ h4 {
         background: linear-gradient(45deg, rgba(41, 41, 41, 0.151), rgba(82, 81, 81, 0.205), rgba(56, 56, 56, 0.151));
     }
     .header {
-        background: url('../../assets/Images/header_image.jpeg') no-repeat;
+        background: url('../../../assets/Images/header_image.jpeg') no-repeat;
         background-blend-mode: hard-light;
         background-size: contain;
         background-position-y: bottom;
