--- a/brioche/src/components/Footer/Newsletter/style.module.css
+++ b/brioche/src/components/Footer/Newsletter/style.module.css
@@ -20,35 +20,14 @@
 }
 
 .form {
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 1rem;
 }
 
-.input {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  background-color: transparent;
-  border: 1px solid #4a4a4a;
-  color: #e0e0e0;
-  width: 100%;
-  max-width: 300px;
-  height: 40px;
-}
-
+.input,
 .button {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  background-color: transparent;
-  border: 1px solid #4a4a4a;
-  color: #e0e0e0;
-  height: 40px;
-  cursor: pointer;
   width: 100%;
   max-width: 300px;
 }
-
 @media screen and (min-width: 768px) {
   .newsletter {
     width: 80%;
@@ -65,6 +44,18 @@
 
   .input {
     width: 60%;
+    height: 40px;
+    margin-right: 20px;
+    background: none;
+    border: 1px solid var(--theme-color);
+    border-radius: 9px;
+    padding-left: 10px;
+    transition: 0.5s;
+  }
+  .input:focus-visible{
+    outline: none;
+    border: 2px solid var(--theme-color);
+    transition: 0.5s;
   }
 
   .button {
