finished the gallery section

--- a/Frontend/brioche/src/components/Home/Gallery/style.module.css
+++ b/Frontend/brioche/src/components/Home/Gallery/style.module.css
@@ -1,14 +1,14 @@
 .Gallery{
     display:  flex;
-    padding: 5% 1%;
+    padding: 5% 0%;
     margin: 2% 4%;
 }
 .image_container{
     display: flex;
     height: auto;
-    width: 60%;
+    width: 70%;
     overflow: scroll;
-    -ms-overflow-style: none;  /* IE and Edge */
+    -ms-overflow-style: none;
     scrollbar-width: none;
 }
 .text_container{
@@ -17,7 +17,29 @@
     position: sticky;
 }
 .image_container img{
-    height: 300px;
+    height: 350px;
     margin: 0% 2%;
     border-radius: 0%;
+}
+.arrow_container {  
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.more_button{
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+.more_button:hover{
+    border: none;
+    background: transparent;
+}
+i:hover{
+    transform: translateX(6px);
+    transition: 100ms;
 }
