--- a/Frontend/brioche/src/components/Home/About/style.module.css
+++ b/Frontend/brioche/src/components/Home/About/style.module.css
@@ -4,7 +4,7 @@
     overflow: hidden;
     position: relative;
     font-family: 'Cormorant Upright';
-    margin-top: 50px;
+    margin: 50px;
 }
 
 .container::before {
